# bamjun.pythonanywhere.com

./: .gitignore  README.md  manage.py  pyproject.toml
.github/workflows/: formatter.yml
a_page_main/: apps.py  urls.py  views.py
bamjun/: asgi.py  settings.py  urls.py  wsgi.py
templates/: home.html
templates/a_users/: profile_settings.html
