[tool.poetry]
name = "bamjun-pythonanywhere-com"
version = "0.1.0"
description = ""
authors = ["bamjun <khy5116@naver.com>"]
readme = "README.md"
packages = [{include = "bamjun"}]

[tool.poetry.dependencies]
python = "3.10.5"
django = "4.0.6"
python-decouple = "^3.8"
# typing-extensions = "3.10.0.2"  # 특정 버전 명시 (pythonanywhere에서 수정불가)


# [tool.poetry.group.dev.dependencies]
# black = "^24.8.0"
# isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
